update package contacts

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,12 +41,12 @@ set(CPACK_STRIP_FILES YES)
 set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "X11 screen manager")
 set(CPACK_PACKAGE_DESCRIPTION "adaptive screen brightness/temperature manager")
-set(CPACK_PACKAGE_CONTACT "fushkodev@outlook.it")
+set(CPACK_PACKAGE_CONTACT "f.fusco@pm.me")
 set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE")
 set(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/README.md")
 
 set(CPACK_DEBIAN_PACKAGE_NAME "gummy")
-set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Francesco Fusco <fushkodev@outlook.it>")
+set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Francesco Fusco <f.fusco@pm.me>")
 set(CPACK_DEBIAN_PACKAGE_HOMEPAGE "https://github.com/Fushko/gummy")
 set(CPACK_DEBIAN_PACKAGE_SECTION "utils")
 set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS YES)
