cmake: add daemon path message

--- a/gummy/gummyd/CMakeLists.txt
+++ b/gummy/gummyd/CMakeLists.txt
@@ -9,7 +9,10 @@ target_link_libraries(libgummyd PRIVATE
     nlohmann_json::nlohmann_json
     spdlog::spdlog
 )
-target_compile_definitions(libgummyd PRIVATE CMAKE_INSTALL_DAEMON_PATH="${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBEXECDIR}/gummyd")
+
+set(CMAKE_INSTALL_DAEMON_PATH "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBEXECDIR}/gummyd")
+message("-- Daemon path: " ${CMAKE_INSTALL_DAEMON_PATH})
+target_compile_definitions(libgummyd PRIVATE CMAKE_INSTALL_DAEMON_PATH="${CMAKE_INSTALL_DAEMON_PATH}")
 target_compile_features(libgummyd PRIVATE cxx_std_20)
 
 add_subdirectory(gummyd)
