remove x11 from package description

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,7 @@ set(CPACK_GENERATOR "DEB")
 set(CPACK_STRIP_FILES YES)
 
 set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
-set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "X11 screen manager")
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "screen manager")
 set(CPACK_PACKAGE_DESCRIPTION "adaptive screen brightness/temperature manager")
 set(CPACK_PACKAGE_CONTACT "f.fusco@pm.me")
 set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE")
