--- a/gummyd/gummyd/CMakeLists.txt
+++ b/gummyd/gummyd/CMakeLists.txt
@@ -56,7 +56,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE
     -latomic
 )
 
-target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/gummy/gummyd/")
+target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/gummyd")
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)
 target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic)
 target_compile_definitions(${PROJECT_NAME} PRIVATE
@@ -69,4 +69,4 @@ if(NOT UDEV_RULES_DIR)
 endif()
 
 install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION "${CMAKE_INSTALL_LIBEXECDIR}")
-install(FILES "${CMAKE_SOURCE_DIR}/gummy/gummyd/data/udev/99-gummy.rules" DESTINATION "${UDEV_RULES_DIR}")
+install(FILES "${CMAKE_SOURCE_DIR}/gummyd/data/udev/99-gummy.rules" DESTINATION "${UDEV_RULES_DIR}")
