--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,7 +47,7 @@ set(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/README.md")
 
 set(CPACK_DEBIAN_PACKAGE_NAME "gummy")
 set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Francesco Fusco <f.fusco@pm.me>")
-set(CPACK_DEBIAN_PACKAGE_HOMEPAGE "https://github.com/Fushko/gummy")
+set(CPACK_DEBIAN_PACKAGE_HOMEPAGE "https://github.com/f-fusco/gummy")
 set(CPACK_DEBIAN_PACKAGE_SECTION "utils")
 set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS YES)
 set(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
