cpack: fix readme

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,7 +61,7 @@ set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "screen manager")
 set(CPACK_PACKAGE_DESCRIPTION "adaptive screen brightness/temperature manager")
 set(CPACK_PACKAGE_CONTACT "f.fusco@pm.me")
 set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE")
-set(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/README.md")
+set(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/README")
 
 set(CPACK_DEBIAN_PACKAGE_NAME "gummy")
 set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Francesco Fusco <f.fusco@pm.me>")
