--- a/gummy-cli/CMakeLists.txt
+++ b/gummy-cli/CMakeLists.txt
@@ -17,7 +17,7 @@ FetchContent_MakeAvailable(cli11)
 endif()
 
 add_executable(${PROJECT_NAME})
-target_sources(${PROJECT_NAME} PRIVATE gummy-cli/gummy-cli.cpp)
+target_sources(${PROJECT_NAME} PRIVATE gummy-cli/gummy-cli.cpp ../gummyd/gummyd/file.hpp)
 target_link_libraries(${PROJECT_NAME} PRIVATE
     nlohmann_json::nlohmann_json
     CLI11::CLI11
