--- a/gummy-cli/CMakeLists.txt
+++ b/gummy-cli/CMakeLists.txt
@@ -3,15 +3,15 @@
 
 project(gummy-cli LANGUAGES CXX)
 
-option(GUMMY_EXTERNAL_CLI11  "" ON)
+option(GUMMY_EXTERNAL_CLI11  "" OFF)
 
 if (GUMMY_EXTERNAL_CLI11)
-find_package(CLI11 2.1.2 REQUIRED)
+find_package(CLI11 2.6.1 REQUIRED)
 else()
 set(CLI11_PRECOMPILED ON)
 FetchContent_Declare(cli11
     GIT_REPOSITORY https://github.com/CLIUtils/CLI11
-    GIT_TAG 291c58789c031208f08f4f261a858b5b7083e8e2 #v2.3.2
+    GIT_TAG v2.6.1
 )
 FetchContent_MakeAvailable(cli11)
 endif()
